--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,49 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Total'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=2.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['_cache\\\\cache-p\\\\9994b6a3ba3c46af807259c8b5d13f70',\n",
-       " '_cache\\\\cache-p\\\\0bc0717ead83e333f080721b1355126e']"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from VwPipeline import Loggers, Handlers\n",
     "from VwPipeline.VwCache import VwCache\n",
@@ -91,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,14 +182,24 @@
     "    import random\n",
     "    return random.random() < fraction\n",
     "\n",
+    "class BaselineRandom:\n",
+    "    name = 'Random'\n",
+    "    \n",
+    "    def process(decision):\n",
+    "        for o in decision['_outcomes']:\n",
+    "            yield {(name, 'p'): 1 / len(o['_a'])}\n",
+    "\n",
+    "def get_or(obj, field, default):\n",
+    "    return default if field not in obj else obj[field]\n",
+    "            \n",
     "class DsJsonCcb:   \n",
     "    default_top_processor = lambda o: {\n",
     "        'Timestamp': o['Timestamp'],\n",
-    "        '_skipLearn': False if '_skipLearn' not in o else o['_skipLearn'],\n",
-    "        'pdrop': 0.0 if 'pdrop' not in o else o['pdrop']}\n",
+    "        '_skipLearn': get_or(o, '_skipLearn', False),\n",
+    "        'pdrop': get_or(o, 'pdrop', 0.0)}\n",
     "    \n",
     "    default_slot_processor = lambda o: {\n",
-    "        '_inc': o['_inc'] if '_inc' in o else []}\n",
+    "        '_inc': get_or(o, '_inc', [])}\n",
     "    \n",
     "    default_outcome_processor = lambda o: {\n",
     "        '_label_cost': o['_label_cost'],\n",
@@ -244,6 +214,9 @@
     "        '_slots': [default_slot_processor],\n",
     "        '_outcomes': [default_outcome_processor]\n",
     "    }\n",
+    "    \n",
+    "    indexers = [lambda o: pd.to_datetime(o['Timestamp'])]\n",
+    "    baselines = [BaselineRandom()]\n",
     "\n",
     "    filters = [is_ccb_decision]\n",
     "\n",
@@ -270,29 +243,8 @@
     "        \n",
     "        result = dict(ChainMap(top, {'c': dict(ChainMap(shared, {'_multi': actions, '_slots': slots})), '_outcomes': outcomes}))\n",
     "        return json.dumps(result)\n",
-    "        \n",
-    "    def ndjson_2_slots(self, line):\n",
-    "        parsed = json.loads(line)\n",
-    "        session = {'Session': str(uuid.uuid4()),\n",
-    "                    'T': pd.to_datetime(parsed['shared']['T']),\n",
-    "                    'NumActions': len(parsed['_multi']),\n",
-    "                    'NumSlots': len(parsed['_slots']),\n",
-    "                    'SkipLearn': False if '_skipLearn' not in parsed['shared'] else parsed['shared']['_skipLearn'],\n",
-    "                    'Pdrop': 0.0 if 'pdrop' not in parsed['shared'] else parsed['shared']['pdrop']}\n",
-    "        session_custom = [p(parsed['shared']) for p in self.context_processors]\n",
-    "\n",
-    "        slots = [None] * len(parsed['slots'])\n",
-    "        for i, o in enumerate(parsed['slots']):\n",
-    "            slots[i] = ChainMap({'SlotIdx': i,\n",
-    "                    'Reward': o['Reward'],\n",
-    "                    'Id': o['Id'],\n",
-    "                    'ActionsPerSlot': len(o['_a']),\n",
-    "                    'Chosen': o['Chosen'],\n",
-    "                    'Prob': o['P']},\n",
-    "                    *[p(o) for p in self.slot_processors])\n",
-    "        \n",
-    "        return map(lambda s: ChainMap(session, *session_custom, s), slots)\n",
     "    \n",
+    "           \n",
     "    def process(self, lines):\n",
     "        for f in self.filters:\n",
     "            lines = filter(lambda l: f(l), lines)\n",
@@ -324,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,28 +286,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing small1.json...\n",
-      "Processing small2.json...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['processed\\\\small1.json', 'processed\\\\small2.json']"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "parser = DsJsonCcb()\n",
     "pipeline = FilesPipeline()\n",
@@ -366,28 +299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing processed\\small1.json...\n",
-      "Processing processed\\small2.json...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['processed\\\\small1.json.process', 'processed\\\\small2.json.process']"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "parser = DsJsonCcb(filters=[lambda l: True])\n",
     "result = pipeline.process(result, parser.process, process=True)\n",
@@ -396,28 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing small1.json...\n",
-      "Processing small2.json...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['small1.json.process', 'small2.json.process']"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sampler = UniformSampler(0.5)\n",
     "\n",
