--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "small = ['small1.json', 'small2.json']\n",
+    "small = ['/Users/alextaim/data/ccb/27_0000000000.json']\n",
     "large = ['01_0.json']\n",
     "\n",
     "files = small"
@@ -25,13 +25,13 @@
     "import pandas as pd\n",
     "\n",
     "#your vw path\n",
-    "vw_path = r'C:\\vw\\vw.exe'\n",
+    "vw_path = r'vw'\n",
     "\n",
     "cache = VwCache(r'_cache')\n",
     "vw = Vw(\n",
     "    vw_path,\n",
     "    cache,\n",
-    "    handlers=[Handlers.WidgetHandler()],\n",
+    "    handlers=[]#Handlers.WidgetHandler()],\n",
     "    )\n",
     "\n",
     "opts = pd.DataFrame(product(\n",
@@ -182,13 +182,6 @@
     "    import random\n",
     "    return random.random() < fraction\n",
     "\n",
-    "class BaselineRandom:\n",
-    "    name = 'Random'\n",
-    "    \n",
-    "    def process(decision):\n",
-    "        for o in decision['_outcomes']:\n",
-    "            yield {(name, 'p'): 1 / len(o['_a'])}\n",
-    "\n",
     "def get_or(obj, field, default):\n",
     "    return default if field not in obj else obj[field]\n",
     "            \n",
@@ -214,17 +207,25 @@
     "        '_slots': [default_slot_processor],\n",
     "        '_outcomes': [default_outcome_processor]\n",
     "    }\n",
+    "\n",
+    "    indexers = {\n",
+    "        't': lambda o: o['Timestamp']\n",
+    "    }\n",
     "    \n",
-    "    indexers = [lambda o: pd.to_datetime(o['Timestamp'])]\n",
-    "    baselines = [BaselineRandom()]\n",
+    "    baselines = {\n",
+    "        'random': lambda obj: [1 / len(o['_a']) for o in obj['_outcomes']],\n",
+    "        'baseline1_old': lambda obj: [o['_p'][0] * int(o['_a'][0] == i) for i, o in enumerate(obj['_outcomes'])]\n",
+    "    }\n",
     "\n",
     "    filters = [is_ccb_decision]\n",
     "\n",
-    "    def __init__(self, processors = None, filters = None):\n",
+    "    def __init__(self, processors = None, filters = None, indexers = None, baselines = None):\n",
     "        self.processors = processors if processors is not None else self.processors\n",
     "        self.filters = filters if filters is not None else self.filters\n",
+    "        self.indexers = indexers if indexers is not None else self.indexers\n",
+    "        self.baselines = baselines if baselines is not None else self.baselines\n",
     "\n",
-    "    def process_decision(self, line):\n",
+    "    def _process_decision(self, line):\n",
     "        parsed = json.loads(line)\n",
     "        top = dict(ChainMap(*[p(parsed) for p in self.processors['/']]))\n",
     "        shared = dict(ChainMap(*[p(parsed['c']) for p in self.processors['c']]))\n",
@@ -243,15 +244,42 @@
     "        \n",
     "        result = dict(ChainMap(top, {'c': dict(ChainMap(shared, {'_multi': actions, '_slots': slots})), '_outcomes': outcomes}))\n",
     "        return json.dumps(result)\n",
+    "\n",
+    "    def _decision_2_prediction(self, line):\n",
+    "        parsed = json.loads(line)\n",
+    "        result = {\n",
+    "            'i': {},\n",
+    "            'a': [],\n",
+    "            'r': [],\n",
+    "            'p': [],\n",
+    "            'n': 1 if 'pdrop' not in parsed else 1 / (1 - parsed['pdrop']),\n",
+    "            'b': {}\n",
+    "        }\n",
+    "        for i, o in enumerate(parsed['_outcomes']):\n",
+    "            result['a'].append(o['_a'][0])         \n",
+    "            result['p'].append(o['_p'][0])\n",
+    "            result['r'].append(-o['_label_cost'])\n",
+    "\n",
+    "        for indexer_name, indexer_func in self.indexers.items():\n",
+    "            result['i'][indexer_name] = indexer_func(parsed)\n",
+    "\n",
+    "        for baseline_name, baseline_func in self.baselines.items():\n",
+    "            result['b'][baseline_name] = baseline_func(parsed)\n",
+    "\n",
+    "        return json.dumps(result)\n",
     "    \n",
     "           \n",
     "    def process(self, lines):\n",
     "        for f in self.filters:\n",
     "            lines = filter(lambda l: f(l), lines)\n",
     "        if len(self.processors) > 1:\n",
-    "            return map(lambda l: f'{self.process_decision(l)}\\n', lines) \n",
+    "            return map(lambda l: f'{self._process_decision(l)}\\n', lines) \n",
     "        return lines\n",
-    "    \n",
+    "\n",
+    "    def predict(self, lines):\n",
+    "        for f in self.filters:\n",
+    "            lines = filter(lambda l: f(l), lines)\n",
+    "        return map(lambda l: f'{self._decision_2_prediction(l)}\\n', lines) \n",
     "\n",
     "class VwPredictionsCcb:\n",
     "    @staticmethod\n",
@@ -265,6 +293,71 @@
     "    @staticmethod\n",
     "    def files_2_slots(files):\n",
     "        return itertools.chain.from_iterable(map(lambda f: VwPredictionsCcb.lines_2_slots(open(f)), files))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def ccb_predictions(files, index = 't'):\n",
+    "    for f in files:\n",
+    "        for l in open(f):\n",
+    "\n",
+    "\n",
+    "class CcbPredictions:\n",
+    "    def __init__(self, files, index='t'):\n",
+    "        self.files = files\n",
+    "        self.index = index\n",
+    "        \n",
+    "    def iter_slots(self):\n",
+    "        result = {}\n",
+    "        for f in files:\n",
+    "            for l in open(f):\n",
+    "                o = json.loads(l)\n",
+    "                for \n",
+    "                    yield result"
+   ]
+  },
+  {
+   "source": [
+    "# Estimators"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ips:\n",
+    "    slots = None\n",
+    "    def __init__(self, slots = None):\n",
+    "        self.slots = slots\n",
+    "        self.r = 0\n",
+    "        self.n = 0\n",
+    "\n",
+    "    def add(self, r, p_log):\n",
+    "        slots = self.slots if self.slots else range(len(prediction['a']))\n",
+    "        for s in slots:\n",
+    "            self.r += prediction['r'] * \n",
+    "\n",
+    "\n",
+    "    def get(self):\n",
+    "        return 0 if self.n == 0 else self.r / self.n \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list({'a':1}.items())"
    ]
   },
   {
@@ -293,8 +386,8 @@
     "parser = DsJsonCcb()\n",
     "pipeline = FilesPipeline()\n",
     "\n",
-    "result = pipeline.process(small, parser.process, path_gen=lambda p: fr'processed\\{p}', process=True)\n",
-    "result"
+    "slim = pipeline.process(small, parser.process, path_gen=lambda p: fr'processed\\{p}', process=True)\n",
+    "slim"
    ]
   },
   {
@@ -304,8 +397,8 @@
    "outputs": [],
    "source": [
     "parser = DsJsonCcb(filters=[lambda l: True])\n",
-    "result = pipeline.process(result, parser.process, process=True)\n",
-    "result"
+    "cfe = pipeline.process(slim, parser.predict, process=True)\n",
+    "cfe"
    ]
   },
   {
@@ -702,9 +795,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python385jvsc74a57bd0fcc4d9e2a8350f4b426fa88136c80c744ccaacb1fcccdec649c503ae8c1bacf1",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -716,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
