--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -31,7 +31,7 @@
     "vw = Vw(\n",
     "    vw_path,\n",
     "    cache,\n",
-    "    handlers=[]#Handlers.WidgetHandler()],\n",
+    "    handlers=[Handlers.WidgetHandler()],\n",
     "    )\n",
     "\n",
     "opts = pd.DataFrame(product(\n",
@@ -43,265 +43,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Dataflow"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import pandas as pd\n",
-    "\n",
-    "from itertools import chain\n",
-    "from pathlib import Path\n",
-    "\n",
-    "\n",
-    "\n",
-    "class FileSizeHasher:\n",
-    "    extension = 'size'\n",
-    "    \n",
-    "    def evaluate(self, path):\n",
-    "        return Path(path).stat().st_size\n",
-    "\n",
-    "class FilesPipeline:\n",
-    "    hasher = FileSizeHasher()\n",
-    "    \n",
-    "    def _load_hash(self, path):\n",
-    "        hash_path = f'{path}.{self.hasher.extension}'\n",
-    "        if not Path(hash_path).exists():\n",
-    "            return None\n",
-    "        try:\n",
-    "            hash_value = int(open(hash_path, 'r').read())\n",
-    "        except:\n",
-    "            hash_value = None\n",
-    "        return hash_value\n",
-    "    \n",
-    "    def _is_in_sync(self, inp, output):\n",
-    "        input_hash = self.hasher.evaluate(inp)\n",
-    "        output_hash = self._load_hash(output)\n",
-    "        return input_hash and output_hash and input_hash == output_hash\n",
-    "\n",
-    "    def _sync(self, inp, output):\n",
-    "        with open(f'{output}.{self.hasher.extension}','w') as f:\n",
-    "            f.write(str(self.hasher.evaluate(inp)))\n",
-    "    \n",
-    "    def __init__(self, hasher = None):\n",
-    "        self.hasher = hasher if hasher is not None else self.hasher\n",
-    "    \n",
-    "    def process(self, \n",
-    "        files,\n",
-    "        processor,\n",
-    "        path_gen=None,\n",
-    "        process=False):\n",
-    "        path_gen = path_gen or (lambda f: f'{f}.{processor.__name__}') \n",
-    "        result = []\n",
-    "        for path_in in files:\n",
-    "            print(f'Processing {path_in}...')\n",
-    "            path_out = path_gen(path_in)\n",
-    "            Path(path_out).parent.mkdir(parents=True, exist_ok=True)\n",
-    "            if process or not self._is_in_sync(path_in, path_out):\n",
-    "                with open(path_out, 'w') as fout:\n",
-    "                    with open(path_in) as fin:\n",
-    "                        fout.writelines(processor(fin))\n",
-    "                self._sync(path_in, path_out)\n",
-    "            if Path(path_out).exists():\n",
-    "                result.append(path_out)\n",
-    "        return result\n",
-    "\n",
-    "def files_2_csvs(\n",
-    "    files,\n",
-    "    processor,\n",
-    "    path_gen=None,\n",
-    "    process=False):\n",
-    "    result = []\n",
-    "    for f in files:\n",
-    "        print(f'Processing {f}...')\n",
-    "        output = path_gen(f)\n",
-    "        Path(output).parent.mkdir(parents=True, exist_ok=True)\n",
-    "        if process or not _is_in_sync(f, output):\n",
-    "            df = pd.DataFrame(processor(open(f)))\n",
-    "            if len(df) > 0:\n",
-    "                df.to_csv(output, index=False)\n",
-    "            _sync(f, output)\n",
-    "        if Path(output).exists():\n",
-    "            result.append(output)\n",
-    "    return result\n",
-    "\n",
-    "def csvs_2_rows(files, processors=[]):\n",
-    "    if not processors:\n",
-    "        processors = [lambda d: d]\n",
-    "    for kv in chain.from_iterable(map(lambda f: pd.read_csv(f).iterrows(), files)):\n",
-    "        yield ChainMap(*[p(kv[1]) for p in processors])\n",
-    "\n",
-    "def ndjsons_2_rows(files, processors=[]):\n",
-    "    if not processors:\n",
-    "        processors = [lambda d: d]\n",
-    "    for o in map(lambda l: json.loads(l), chain.from_iterable(map(lambda f: open(f), files))):\n",
-    "        yield o"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Parsers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import itertools\n",
-    "import json\n",
-    "import uuid\n",
-    "import pandas as pd\n",
-    "from collections import ChainMap\n",
-    "\n",
-    "def is_ccb_decision(line):\n",
-    "        return line.startswith('{\"Timestamp\"')\n",
-    "    \n",
-    "class UniformSampler:\n",
-    "    counter = 0\n",
-    "    \n",
-    "    def __init__(self, fraction):\n",
-    "        self.period = int(1/fraction)\n",
-    "        \n",
-    "    def do(self, line):\n",
-    "        self.counter = (self.counter + 1) % self.period\n",
-    "        return self.counter == 0\n",
-    "\n",
-    "def sample(fraction):\n",
-    "    import random\n",
-    "    return random.random() < fraction\n",
-    "\n",
-    "def get_or(obj, field, default):\n",
-    "    return default if field not in obj else obj[field]\n",
-    "            \n",
-    "class DsJsonCcb:   \n",
-    "    default_top_processor = lambda o: {\n",
-    "        'Timestamp': o['Timestamp'],\n",
-    "        '_skipLearn': get_or(o, '_skipLearn', False),\n",
-    "        'pdrop': get_or(o, 'pdrop', 0.0)}\n",
-    "    \n",
-    "    default_slot_processor = lambda o: {\n",
-    "        '_inc': get_or(o, '_inc', [])}\n",
-    "    \n",
-    "    default_outcome_processor = lambda o: {\n",
-    "        '_label_cost': o['_label_cost'],\n",
-    "        '_id': o['_id'],\n",
-    "        '_a': o['_a'],\n",
-    "        '_p': o['_p']} \n",
-    "    \n",
-    "    processors = {\n",
-    "        '/': [default_top_processor],\n",
-    "        'c': [],\n",
-    "        '_multi': [],\n",
-    "        '_slots': [default_slot_processor],\n",
-    "        '_outcomes': [default_outcome_processor]\n",
-    "    }\n",
-    "\n",
-    "    indexers = {\n",
-    "        't': lambda o: o['Timestamp']\n",
-    "    }\n",
-    "    \n",
-    "    baselines = {\n",
-    "        'random': lambda obj: [1 / len(o['_a']) for o in obj['_outcomes']],\n",
-    "        'baseline1_old': lambda obj: [o['_p'][0] * int(o['_a'][0] == i) for i, o in enumerate(obj['_outcomes'])]\n",
-    "    }\n",
-    "\n",
-    "    filters = [is_ccb_decision]\n",
-    "\n",
-    "    def __init__(self, processors = None, filters = None, indexers = None, baselines = None):\n",
-    "        self.processors = processors if processors is not None else self.processors\n",
-    "        self.filters = filters if filters is not None else self.filters\n",
-    "        self.indexers = indexers if indexers is not None else self.indexers\n",
-    "        self.baselines = baselines if baselines is not None else self.baselines\n",
-    "\n",
-    "    def _process_decision(self, line):\n",
-    "        parsed = json.loads(line)\n",
-    "        top = dict(ChainMap(*[p(parsed) for p in self.processors['/']]))\n",
-    "        shared = dict(ChainMap(*[p(parsed['c']) for p in self.processors['c']]))\n",
-    "\n",
-    "        actions = [None] * len(parsed['c']['_multi'])\n",
-    "        for i, o in enumerate(parsed['c']['_multi']):\n",
-    "            actions[i] = dict(ChainMap(*[p(o) for p in self.processors['_multi']]))\n",
-    "\n",
-    "        slots = [None] * len(parsed['c']['_slots'])\n",
-    "        for i, o in enumerate(parsed['c']['_slots']):\n",
-    "            slots[i] = dict(ChainMap(*[p(o) for p in self.processors['_slots']]))\n",
-    "        \n",
-    "        outcomes = [None] * len(parsed['_outcomes'])\n",
-    "        for i, o in enumerate(parsed['_outcomes']):\n",
-    "            outcomes[i] = dict(ChainMap(*[p(o) for p in self.processors['_outcomes']]))\n",
-    "        \n",
-    "        result = dict(ChainMap(top, {'c': dict(ChainMap(shared, {'_multi': actions, '_slots': slots})), '_outcomes': outcomes}))\n",
-    "        return json.dumps(result)\n",
-    "\n",
-    "    def _decision_2_prediction(self, line):\n",
-    "        parsed = json.loads(line)\n",
-    "        result = {\n",
-    "            'i': {},\n",
-    "            'a': [],\n",
-    "            'r': [],\n",
-    "            'p': [],\n",
-    "            'n': 1 if 'pdrop' not in parsed else 1 / (1 - parsed['pdrop']),\n",
-    "            'b': {}\n",
-    "        }\n",
-    "        for i, o in enumerate(parsed['_outcomes']):\n",
-    "            result['a'].append(o['_a'][0])         \n",
-    "            result['p'].append(o['_p'][0])\n",
-    "            result['r'].append(-o['_label_cost'])\n",
-    "\n",
-    "        for indexer_name, indexer_func in self.indexers.items():\n",
-    "            result['i'][indexer_name] = indexer_func(parsed)\n",
-    "\n",
-    "        for baseline_name, baseline_func in self.baselines.items():\n",
-    "            result['b'][baseline_name] = baseline_func(parsed)\n",
-    "\n",
-    "        return json.dumps(result)\n",
-    "    \n",
-    "           \n",
-    "    def process(self, lines):\n",
-    "        for f in self.filters:\n",
-    "            lines = filter(lambda l: f(l), lines)\n",
-    "        if len(self.processors) > 1:\n",
-    "            return map(lambda l: f'{self._process_decision(l)}\\n', lines) \n",
-    "        return lines\n",
-    "\n",
-    "    def predict(self, lines):\n",
-    "        for f in self.filters:\n",
-    "            lines = filter(lambda l: f(l), lines)\n",
-    "        return map(lambda l: f'{self._decision_2_prediction(l)}\\n', lines) \n",
-    "\n",
-    "class VwPredictionsCcb:\n",
-    "    @staticmethod\n",
-    "    def line_2_slot(line):\n",
-    "        return {p.split(':')[0] : float(p.split(':')[1])  for p in line.split(',')}\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def lines_2_slots(lines):\n",
-    "        return map(VwPredictionsCcb.line_2_slot, filter(lambda l : not l.isspace(), lines))\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def files_2_slots(files):\n",
-    "        return itertools.chain.from_iterable(map(lambda f: VwPredictionsCcb.lines_2_slots(open(f)), files))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "def ccb_predictions(files, index = 't'):\n",
     "    for f in files:\n",
     "        for l in open(f):\n",
@@ -341,14 +87,30 @@
     "        self.r = 0\n",
     "        self.n = 0\n",
     "\n",
-    "    def add(self, r, p_log):\n",
-    "        slots = self.slots if self.slots else range(len(prediction['a']))\n",
+    "    def add(self, r, p_log, p, n = 1):\n",
+    "        slots = self.slots if self.slots else range(len(r))\n",
     "        for s in slots:\n",
-    "            self.r += prediction['r'] * \n",
-    "\n",
+    "            self.r += n * r[s] * p[s] / p_log[s]\n",
+    "            self.n += n\n",
     "\n",
     "    def get(self):\n",
-    "        return 0 if self.n == 0 else self.r / self.n \n"
+    "        return {'e': 0 if self.n == 0 else self.r / self.n}\n",
+    "\n",
+    "class snips:\n",
+    "    slots = None\n",
+    "    def __init__(self, slots = None):\n",
+    "        self.slots = slots\n",
+    "        self.r = 0\n",
+    "        self.n = 0\n",
+    "\n",
+    "    def add(self, r, p_log, p, n = 1):\n",
+    "        slots = self.slots if self.slots else range(len(r))\n",
+    "        for s in slots:\n",
+    "            self.r += n * r[s] * p[s] / p_log[s]\n",
+    "            self.n += n * p[s] / p_log[s]\n",
+    "\n",
+    "    def get(self):\n",
+    "        return {'e': 0 if self.n == 0 else self.r / self.n}"
    ]
   },
   {
@@ -356,16 +118,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "list({'a':1}.items())"
+    "df.to_csv('test.csv', index=False)\n",
+    "pd.read_csv('test.csv', header=[0,1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Processors"
+    "# Usage"
    ]
+  },
+  {
+   "source": [
+    "## Generate slim dsjson"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -373,32 +150,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def timestamp(row):\n",
-    "    return {'T': row['Timestamp']}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parser = DsJsonCcb()\n",
+    "from Pipeline.dataflow import FilesPipeline\n",
+    "from Pipeline.Dsjson import ccb\n",
+    "\n",
+    "processor = ccb.Processor()\n",
     "pipeline = FilesPipeline()\n",
     "\n",
-    "slim = pipeline.process(small, parser.process, path_gen=lambda p: fr'processed\\{p}', process=True)\n",
+    "slim = pipeline.process(small, processor.process, path_gen=lambda p: fr'slim/{p}', process=True)\n",
     "slim"
    ]
   },
   {
+   "source": [
+    "## Sample"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = DsJsonCcb(filters=[lambda l: True])\n",
-    "cfe = pipeline.process(slim, parser.predict, process=True)\n",
+    "from Pipeline.dataflow import FilesPipeline\n",
+    "from Pipeline.Dsjson import ccb, filters\n",
+    "\n",
+    "sampler = filters.UniformSampler(0.5)\n",
+    "\n",
+    "processor = ccb.Processor(filters=[lambda l: sampler.do(l)])\n",
+    "result = pipeline.process(small, processor.process, path_gen=lambda p: fr'sample/{p}', process=True)\n",
+    "result"
+   ]
+  },
+  {
+   "source": [
+    "## Predict"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Pipeline.dataflow import FilesPipeline\n",
+    "from Pipeline.Dsjson import ccb\n",
+    "\n",
+    "predictor = ccb.Predictor(filters=[lambda l: True])\n",
+    "cfe = pipeline.process(slim, predictor.predict, path_gen=lambda p: fr'cfe/{p}', process=True)\n",
     "cfe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "import json\n",
+    "predictions = map(lambda l: json.loads(l), itertools.chain.from_iterable([open(f) for f in cfe]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_factories = {'random': {'ips': lambda: ips()}, 'baseline1_old': {'ips': lambda: ips()}}\n",
+    "pd.DataFrame(aggregate(predictions, agg_factories, 100))"
    ]
   },
   {
