--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -2,21 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "small = ['/Users/alextaim/data/ccb/27_0000000000.json']\n",
-    "large = ['01_0.json']\n",
-    "\n",
-    "files = small"
+    "files = ['/Users/alextaim/data/ccb/original/01.json']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "HBox(children=(HTML(value='Total'), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "129d301f75ed45f3a2ba050e8b15a088"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "bc127eb8c941402b8860158dd27d31d0"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['/Users/alextaim/data/.vw_cache/cache-p/f70c85ace19b22cd7f9b7d447761ecf0']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "from VwPipeline import Loggers, Handlers\n",
     "from VwPipeline.VwCache import VwCache\n",
@@ -27,7 +59,7 @@
     "#your vw path\n",
     "vw_path = r'vw'\n",
     "\n",
-    "cache = VwCache(r'_cache')\n",
+    "cache = VwCache(r'/Users/alextaim/data/.vw_cache')\n",
     "vw = Vw(\n",
     "    vw_path,\n",
     "    cache,\n",
@@ -44,9 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-3-18f64898fe11>, line 6)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-18f64898fe11>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    class CcbPredictions:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def ccb_predictions(files, index = 't'):\n",
     "    for f in files:\n",
@@ -68,59 +109,6 @@
    ]
   },
   {
-   "source": [
-    "# Estimators"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ips:\n",
-    "    slots = None\n",
-    "    def __init__(self, slots = None):\n",
-    "        self.slots = slots\n",
-    "        self.r = 0\n",
-    "        self.n = 0\n",
-    "\n",
-    "    def add(self, r, p_log, p, n = 1):\n",
-    "        slots = self.slots if self.slots else range(len(r))\n",
-    "        for s in slots:\n",
-    "            self.r += n * r[s] * p[s] / p_log[s]\n",
-    "            self.n += n\n",
-    "\n",
-    "    def get(self):\n",
-    "        return {'e': 0 if self.n == 0 else self.r / self.n}\n",
-    "\n",
-    "class snips:\n",
-    "    slots = None\n",
-    "    def __init__(self, slots = None):\n",
-    "        self.slots = slots\n",
-    "        self.r = 0\n",
-    "        self.n = 0\n",
-    "\n",
-    "    def add(self, r, p_log, p, n = 1):\n",
-    "        slots = self.slots if self.slots else range(len(r))\n",
-    "        for s in slots:\n",
-    "            self.r += n * r[s] * p[s] / p_log[s]\n",
-    "            self.n += n * p[s] / p_log[s]\n",
-    "\n",
-    "    def get(self):\n",
-    "        return {'e': 0 if self.n == 0 else self.r / self.n}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -138,57 +126,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Generate slim dsjson"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from Pipeline.ccb.dsjson import processor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['/Users/alextaim/data/ccb/slim/01.json']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
     "from Pipeline.dataflow import FilesPipeline\n",
-    "from Pipeline.Dsjson import ccb\n",
+    "from Pipeline.ccb.dsjson.processor import Processor\n",
     "\n",
-    "processor = ccb.Processor()\n",
+    "processor = Processor()\n",
     "pipeline = FilesPipeline()\n",
     "\n",
-    "slim = pipeline.process(small, processor.process, path_gen=lambda p: fr'slim/{p}', process=True)\n",
+    "slim = pipeline.lines_2_lines(files, processor.process, path_gen=lambda p: p.replace('original', 'slim'), process=True)\n",
     "slim"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Sample"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['/Users/alextaim/data/ccb/sample/01.json']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "source": [
     "from Pipeline.dataflow import FilesPipeline\n",
-    "from Pipeline.Dsjson import ccb, filters\n",
+    "from Pipeline.ccb.dsjson.processor import Processor\n",
+    "from Pipeline.filters import UniformSampler\n",
     "\n",
-    "sampler = filters.UniformSampler(0.5)\n",
+    "sampler = UniformSampler(0.5)\n",
     "\n",
-    "processor = ccb.Processor(filters=[lambda l: sampler.do(l)])\n",
-    "result = pipeline.process(small, processor.process, path_gen=lambda p: fr'sample/{p}', process=True)\n",
+    "processor = Processor(filters=[lambda l: sampler.do(l)])\n",
+    "result = pipeline.lines_2_lines(files, processor.process, path_gen=lambda p: p.replace('original', 'sample'), process=True)\n",
     "result"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Predict"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -197,10 +217,10 @@
    "outputs": [],
    "source": [
     "from Pipeline.dataflow import FilesPipeline\n",
-    "from Pipeline.Dsjson import ccb\n",
+    "from Pipeline.ccb.dsjson.predictor import Predictor\n",
     "\n",
     "predictor = ccb.Predictor(filters=[lambda l: True])\n",
-    "cfe = pipeline.process(slim, predictor.predict, path_gen=lambda p: fr'cfe/{p}', process=True)\n",
+    "cfe = pipeline.process(slim, predictor.predict, path_gen=lambda p: p.replace('slim', 'predict'), process=True)\n",
     "cfe"
    ]
   },
@@ -221,8 +241,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from Pipeline.estimators import estimate, ips, snips\n",
     "agg_factories = {'random': {'ips': lambda: ips()}, 'baseline1_old': {'ips': lambda: ips()}}\n",
-    "pd.DataFrame(aggregate(predictions, agg_factories, 100))"
+    "pd.DataFrame(estimate(predictions, agg_factories, 100))"
    ]
   },
   {
@@ -255,7 +276,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "set([1,3])==set([3,2,1])"
+   ]
   },
   {
    "cell_type": "code",
